# code-flow

./: .gitignore  .todo  README.md  pyproject.toml
.github/workflows/: release.yml
claude/: instructions.md
examples/: fib.py  fib.trace.json  knapsack.py  knapsack.trace.json
src/: README.md
src/codeflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/codeflow/cli/: main.py  models.py  output.py  parser.py
src/codeflow/cli/output/: __init__.py  formatters.py  handler.py  templates.py  ui.py  utils.py
src/codeflow/core/: models.py  runner.py  safe_repr.py  serialization.py  tracer.py
src/codeflow/viz/: graphviz_export.py
tests/: res.json  res_fibo.json  test_cli_models.py  test_event.py  test_parser.py  test_runner.py  test_settrace.py
