[project]
name = "codeflow"
version = "0.1.0"
description = "Python code execution tracer and call graph visualizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz>=0.21",
]

[project.scripts]
codeflow = "codeflow.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"