[project]
name = "codeflow"
version = "0.1.0"
description = "Python code execution tracer and call graph visualizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz>=0.21",
  "pip>=26.0",
  "pytest>=9.0.2",
  "rich>=14.3.2",
  "setuptools>=80.10.2",
]

[project.scripts]
codeflow = "codeflow.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
